audit-deployment.yaml
##deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-api
  template:
    metadata:
      labels:
        app: audit-api
    spec:
      containers:
        - name: audit-api
          image: poseidon2022/auditservice
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
