appointment-service.yaml
##service
apiVersion: v1
kind: Service
metadata:
  name: appointment-api-service
spec:
  type: LoadBalancer
  selector:
    app: physician-api
  ports:
    - targetPort: 80
      port: 7006
