audit-service.yaml
##service
apiVersion: v1
kind: Service
metadata:
  name: audit-api-service
spec:
  type: LoadBalancer
  selector:
    app: audit-api
  ports:
    - targetPort: 80
      port: 7003
