complaint-service.yaml
##service
apiVersion: v1
kind: Service
metadata:
  name: complaint-api-service
spec:
  type: LoadBalancer
  selector:
    app: complaint-api
  ports:
    - targetPort: 80
      port: 7008
