email-service.yaml
##service
apiVersion: v1
kind: Service
metadata:
  name: email-api-service
spec:
  type: LoadBalancer
  selector:
    app: email-api
  ports:
    - targetPort: 80
      port: 7007
