patient-service.yaml
##service
apiVersion: v1
kind: Service
metadata:
  name: patient-api-service
spec:
  type: LoadBalancer
  selector:
    app: patient-api
  ports:
    - targetPort: 80
      port: 7002
